fixed menu window border overflow

--- a/automatweb/css/style.css
+++ b/automatweb/css/style.css
@@ -12,7 +12,8 @@ Version: 0.9
 
 
 /* Begin /automatweb/css/stiil.css */
-body {
+body
+{
 	background: #0386c7 url('/automatweb/images/aw06/layout_t.gif') repeat-x 0px 83px;
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
 	font-size: 11px;
@@ -25,19 +26,24 @@ a:hover {text-decoration: underline}
 a img { border: 0; }
 
 /* päis */
-#pais {
+#pais
+{
 	background: #e2e2e2 url('/automatweb/images/aw06/pais_t.gif') repeat-x;
 	/*min-width: 550px;*/
 	height: 82px;
 	border-bottom: 1px solid #f1f8fc
 }
-#pais_noheader {
+
+#pais_noheader
+{
 	background: #e2e2e2;
 	/*min-width: 550px;*/
 	height: 14px;
 	border-bottom: 1px solid #f1f8fc
 }
-#pais .logo {
+
+#pais .logo
+{
 	background: url('/automatweb/images/aw06/logo_t.gif') no-repeat;
 	width: 239px;
 	height: 57px;
@@ -45,7 +51,9 @@ a img { border: 0; }
 	position: absolute;
 	z-index: 10;
 }
-#pais .logo img {
+
+#pais .logo img
+{
 	margin:17px 0 0 15px
 }
 
@@ -86,27 +94,34 @@ a img { border: 0; }
 	top: 0px;
 	/*position: relative*/
 	height: 19px;
-	padding: none;
+	padding: 0;
 	white-space: nowrap;
 }
 
-#pais div.top-right-menu-item {
+#pais .top-right-menyy div
+{
+	float: left;
+}
+
+#pais div.top-right-menu-item
+{
 	font-size: 11px;
 	float: left;
 	color: #000;
 	border-left: 1px solid #fff;
-	border-right: 1px solid #fff;
 	padding: 5px 8px 0 10px;
-	margin-right: -1px;
+	margin-right: 0px;
 	height: 100%;
 	white-space: nowrap;
 }
 
-#pais .top-right-menyy a {
+#pais .top-right-menyy a
+{
 	color: #000;
 }
 
-#pais .top-right-menyy a.akt {
+#pais .top-right-menyy a.akt
+{
 	border-top: 1px solid #05a6e9;
 	border-left: 1px solid #05a6e9;
 	border-right: 1px solid #05a6e9;
@@ -122,7 +137,8 @@ a img { border: 0; }
 	text-decoration: none ! important;
 }
 
-#pais .top-right-menyy .nool {
+#pais .top-right-menyy .nool
+{
 	top: -1px;
 	position: relative
 }
@@ -168,16 +184,19 @@ a img { border: 0; }
 	padding: 2px 5px 4px;
 	display: block
 }
+
 #pais .tabs .akt {
 	background: url('/automatweb/images/aw06/pais_tab_akt_left.gif') no-repeat;
 	height: 19px;
 	margin-bottom: -1px;
 	position: relative
 }
+
 #pais .tabs .akt .right {
 	background: url('/automatweb/images/aw06/pais_tab_akt_right.gif') no-repeat right top;
 	height: 19px;
 }
+
 #pais .tabs .akt .right a, #pais .tabs .akt .right a:hover {
 	background: url('/automatweb/images/aw06/pais_tab_akt_center.gif') repeat-x;
 	font-weight: bold;
@@ -185,12 +204,20 @@ a img { border: 0; }
 	padding: 4px 5px 2px;
 	text-decoration: none
 }
-#pais .toiming {
+
+#pais .toiming
+{
 	float: right;
 	height: 55px;
 	/*position: relative;*/
 	z-index: 10;
 }
+
+#pais .toiming div
+{
+	float: left;
+}
+
 #pais .toiming a.nupp {
 	float: left;
 	color: #000;
@@ -497,14 +524,14 @@ a img { border: 0; }
 /* sisu kast */
 #sisu {
 	background: #fff;
-	margin-left: 5px;
+	margin-left: 3px;
+	margin-right: 3px;
 	border-top: 1px solid #0373ac;
 	border-bottom: 1px solid #0373ac;
 	font-size: 11px;
 	margin-top: -1px;
 	/*position: relative;*/
 	z-index: 0;
-	padding-right: 10px;
 	padding-bottom: 20px;
 }
 #toimingud {
@@ -658,13 +685,6 @@ span.kast {
 	color: #05a6e9;
 	text-decoration: underline
 }
-
-/* opera fixid @ 01. august 2007 by hannes */
-#pais .top-right-menyy div {
-	float: left;
-}
-
-#pais .toiming div {float: left; }
 
 
 /* KALENDER */
@@ -1349,7 +1369,8 @@ div.menuBar a.menuButton {
 
 }
 
-div.menuBar a.menuButton:hover {
+div.menuBar a.menuButton:hover
+{
 	background-color: #e1e1e1;
 	border-color: #ffffff;
 	color: #000000;
@@ -1357,7 +1378,8 @@ div.menuBar a.menuButton:hover {
 }
 
 div.menuBar a.menuButtonActive,
-div.menuBar a.menuButtonActive:hover {
+div.menuBar a.menuButtonActive:hover
+{
 	background-color: #a0a0a0;
 	border-color: #909090 #f0f0f0 #f0f0f0 #909090;
 	color: #ffffff;
@@ -1365,33 +1387,35 @@ div.menuBar a.menuButtonActive:hover {
 	top: 1px;
 }
 
-div.menu {
-  background-color: #ffffff;
-  border: 1px solid #05a6e9;
-  left: 0px;
-  position: absolute;
-  top: 0px;
-  z-index: 1001;
-  visibility: hidden;
-  padding-bottom: 1px;
+div.menu
+{
+	background-color: #ffffff;
+	border: 1px solid #05a6e9;
+	left: 0px;
+	position: absolute;
+	top: 0px;
+	z-index: 1001;
+	visibility: hidden;
+	padding-bottom: 1px;
 }
 
-div.menu a.menuItem {
-font-family: Arial, Helvetica, sans-serif;
-font-size: 12px ! important;
-  background-color: #e1e1e1;
-  border-top: solid 1px #ffffff;
-  border-left: solid 1px #ffffff;
-  border-right: solid 1px #ffffff;
-  color: #000000;
-  cursor: pointer;
-  display: block;
-  text-decoration: none;
-  white-space: nowrap;
-  background-image: url(/automatweb/images/aw06/bullet_empty.gif);
-  background-repeat: no-repeat;
-  background-position: 4px 9px;
-  padding: 3px 1em;
+div.menu a.menuItem
+{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px ! important;
+	background-color: #e1e1e1;
+	border-top: solid 1px #ffffff;
+	border-left: solid 1px #ffffff;
+	border-right: solid 1px #ffffff;
+	color: #000000;
+	cursor: pointer;
+	display: block;
+	text-decoration: none;
+	white-space: nowrap;
+	background-image: url(/automatweb/images/aw06/bullet_empty.gif);
+	background-repeat: no-repeat;
+	background-position: 4px 9px;
+	padding: 3px 1em;
 }
 
 div.menu a.menuItem:hover, div.menu a.menuItemHighlight {
@@ -1567,25 +1591,28 @@ div.menu a.menuItem_sub span.menuItemText {background: url(/automatweb/images/ar
 	background-color: #FFFFFF;
 }
 
-.filterSelect {
-font-size: 10px;
+.filterSelect
+{
+	font-size: 10px;
 }
 
-.clear {
-	clear: both
+.clear
+{
+	clear: both;
 }
 
 .aw04toolbarbutton,
-.aw04toolbarbuttonhover {
-        float: left;
-		height: 14px;
-        padding: 4px 4px 4px 4px;
-		font-size: 11px;
-		text-align: center;
-		border-style: solid;
-        border-width: 1px;
-        border-color: #E1E1E1;
-		border: 0;
+.aw04toolbarbuttonhover
+{
+	float: left;
+	height: 14px;
+	padding: 4px 4px 4px 4px;
+	font-size: 11px;
+	text-align: center;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E1E1E1;
+	border: 0;
 }
 /* End /automatweb/css/aw06.css */
 
@@ -1613,10 +1640,7 @@ font-size: 10px;
 	border: 1px solid #0386c7;
 }
 #ajaxLoader img { margin: 0 auto; display: block; }
-#ajaxLoader div {
-	font-size: 11px;
-	font-weight:bold;
-	margin: 0 auto;
-	text-align: center;
-	width: 220px;
+#ajaxLoader div
+{
+	font-size: 11px; font-weight:bold; margin: 0 auto; text-align: center; width: 220px;
 }
